Page shift error fixed

--- a/styles/quote.css
+++ b/styles/quote.css
@@ -2,7 +2,6 @@
   width: 70%;
   padding: 0;
   margin-bottom: 40px;
-  background-color: #009991;
   box-sizing: border-box;
 }
 .quote__desc {
